Change File Path

--- a/index.html
+++ b/index.html
@@ -1093,7 +1093,7 @@ This project demonstrates my front-end development skills and attention to aesth
                     <div class="contact-item">
                         <p>Downloadable Resume:</p>
                     </div>
-                    <a href="C:\Users\Medri\Downloads\resume_r2.pdf" download class="resume-button">Resume.pdf</a>
+                    <a href="resume_r2.pdf" download class="resume-button">Resume.pdf</a>
                 </div>
             </div>
 
