--- a/index.html
+++ b/index.html
@@ -1091,6 +1091,11 @@ This project demonstrates my front-end development skills and attention to aesth
                             LinkedIn</a>
                     </div>
                     <div class="contact-item">
+                        <i class="fab fa-github"></i>
+                        <a href="https://github.com/thuxn/thuxn.github.io" target="_blank">Connect on
+                            GitHub</a>
+                    </div>
+                    <div class="contact-item">
                         <p>Downloadable Resume:</p>
                     </div>
                     <a href="resume_r2.pdf" download class="resume-button">Resume.pdf</a>
